--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,17 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="Theme.Anticipate" parent="Base.Theme.Anticipate">
+        <item name="toolbarShadow">@drawable/shadow</item>
+    </style>
+
+    <style name="Base.Theme.Anticipate" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:textColor">?android:textColorPrimary</item>
+
+        <item name="android:windowBackground">@color/background_material_light</item>
     </style>
 
 </resources>
