Floating monitor, try option, lots of fixes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,71 @@
                 android:layout_height="wrap_content"
                 android:text="@string/set_as_default_browser" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="16dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusableInTouchMode="true"
+                android:orientation="horizontal"
+                android:paddingBottom="8dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingStart="16dp"
+                android:theme="@style/Theme.Anticipate.DarkAccent"
+                tools:ignore="UseCompoundDrawables">
+
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@id/textinputlayout_try"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@id/edittext_try"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/enter_a_url"
+                        android:inputType="textUri" />
+
+                </android.support.design.widget.TextInputLayout>
+
+
+                <Button
+                    android:id="@id/button_try"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:text="@string/try_it_out" />
+
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="16dp" />
+
+            <!--<TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Limitations:\nCan only detect the parts of a link that are visible on-screen\n"
+                android:textSize="16sp" />-->
+
+            <CheckBox
+                android:id="@id/checkbox_preload_window"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/floating_window_checkbox" />
+
+
         </LinearLayout>
 
 
