--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,16 @@
         <item name="android:textColor">?android:textColorPrimary</item>
 
         <item name="android:windowBackground">@color/background_material_light</item>
+
+        <item name="popupMenuStyle">@style/PopupMenu</item>
+    </style>
+
+    <style name="Theme.Anticipate.DarkAccent" parent="Theme.Anticipate">
+        <item name="colorAccent">@color/blue_800</item>
+    </style>
+
+    <style name="PopupMenu" parent="@style/Widget.AppCompat.Light.PopupMenu">
+        <item name="overlapAnchor">true</item>
     </style>
 
 </resources>
