--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -136,7 +136,7 @@
                         android:layout_marginBottom="2dp"
                         android:layout_weight="1">
 
-                        <com.pluscubed.anticipate.DispatchBackEditText
+                        <com.pluscubed.anticipate.widget.DispatchBackEditText
                             android:id="@id/edittext_try"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -176,6 +176,45 @@
                     android:layout_height="wrap_content"
                     android:switchPadding="8dp"
                     android:text="@string/floating_window_checkbox" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="16dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingBottom="8dp"
+                    android:paddingEnd="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingStart="16dp"
+                    android:theme="@style/Theme.Anticipate.DarkAccent"
+                    tools:ignore="UseCompoundDrawables">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/per_app_filter_mode" />
+
+                    <Spinner
+                        android:id="@id/spinner_per_app_mode"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@id/button_try"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/configure" />
+
+                </LinearLayout>
 
 
             </LinearLayout>
