--- a/app/src/main/res/layout/floating_monitor.xml
+++ b/app/src/main/res/layout/floating_monitor.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.pluscubed.anticipate.CharLineBreakTextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.pluscubed.anticipate.widget.CharLineBreakTextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,4 +10,4 @@
     tools:text="www.pluscubed.comas;dlkfjas;dlfkjasl;dkfj-asl;kdfjakl;sfjaskl;djfdkl">
 
 
-</com.pluscubed.anticipate.CharLineBreakTextView>
+</com.pluscubed.anticipate.widget.CharLineBreakTextView>
