--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -12,11 +12,14 @@
     <item name="menu_try_browser" type="id" />
     <item name="checkbox_preload_window" type="id" />
     <item name="menu_main_about" type="id" />
-    <item name="recyclerview_excluded" type="id" />
-    <item name="fab_add_excluded" type="id" />
+    <item name="recyclerview" type="id" />
+    <item name="fab_add_perapp" type="id" />
     <item name="app_bar" type="id" />
-    <item name="image_excluded_app" type="id" />
-    <item name="text_excluded_name" type="id" />
-    <item name="text_excluded_desc" type="id" />
+    <item name="image_app" type="id" />
+    <item name="text_name" type="id" />
+    <item name="text_desc" type="id" />
     <item name="spinner_per_app_mode" type="id" />
+    <item name="button_configure_perapp" type="id" />
+    <item name="bottom_sheet" type="id" />
+    <item name="view_mock_fab" type="id" />
 </resources>
