--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,8 +24,23 @@
         <item name="overlapAnchor">true</item>
     </style>
 
-    <style name="Theme.Anticipate.Dialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="Theme.Anticipate.Dialog" parent="Theme.Anticipate">
+        <item name="android:windowBackground">@color/scrim</item>
 
+        <item name="android:statusBarColor">@color/colorPrimarySuperDark</item>
+        <item name="android:navigationBarColor">@color/colorPrimarySuperDark</item>
+
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
+    <style name="Theme.Anticipate.NoDisplay" parent="android:Theme.NoDisplay">
     </style>
 
 </resources>
