--- a/app/src/main/res/layout/activity_dialog_add_perapp.xml
+++ b/app/src/main/res/layout/activity_dialog_add_perapp.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/scrim">
 
-    <LinearLayout
-        android:id="@+id/root"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
         android:background="@drawable/dialog_background"
+        android:elevation="24dp"
         android:orientation="vertical"
         android:transitionName="@string/transition_fab_add">
 
@@ -20,6 +22,11 @@
             android:paddingBottom="8dp"
             android:paddingTop="8dp" />
 
-    </LinearLayout>
+        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+            android:id="@id/progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
 
+    </RelativeLayout>
 </FrameLayout>
