--- a/app/src/main/res/layout/activity_perapplist.xml
+++ b/app/src/main/res/layout/activity_perapplist.xml
@@ -2,7 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@id/app_bar"
@@ -13,7 +14,6 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:elevation="4dp"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
@@ -36,14 +36,28 @@
         android:paddingTop="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="com.pluscubed.anticipate.ViewBelowAppBarBehavior">
+
+        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+            android:id="@id/progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
+
     <View
         android:id="@id/view_mock_fab"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_margin="16dp"
-        android:background="@drawable/mock_fab"
         android:elevation="6dp"
         android:transitionName="@string/transition_fab_add"
+        android:visibility="invisible"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end" />
 
