--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
     </style>
 
     <style name="Theme.Anticipate.Dialog" parent="Theme.Anticipate">
-        <item name="android:windowBackground">@color/scrim</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
 
         <item name="android:statusBarColor">@color/colorPrimarySuperDark</item>
 
