Add swipe to remove tip

--- a/app/src/main/res/layout/list_item_app.xml
+++ b/app/src/main/res/layout/list_item_app.xml
@@ -17,10 +17,11 @@
         tools:src="@mipmap/ic_launcher" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
