--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,7 +39,7 @@
         <item name="android:windowAnimationStyle">@null</item>
     </style>
 
-    <style name="Theme.Anticipate.NoDisplay" parent="android:Theme.NoDisplay">
+    <style name="Theme.Anticipate.NoDisplay" parent="android:Theme.Translucent.NoTitleBar">
     </style>
 
 </resources>
