Added animation styles.
Added icon to return to app.

Turned off nag if accessibility service wasn't enabled.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -19,6 +19,7 @@
     <item name="text_name" type="id" />
     <item name="text_desc" type="id" />
     <item name="spinner_per_app_mode" type="id" />
+    <item name="spinner_animation" type="id" />
     <item name="button_configure_perapp" type="id" />
     <item name="bottom_sheet" type="id" />
     <item name="view_mock_fab" type="id" />
