--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.flipboard.bottomsheet.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.flipboard.bottomsheet.BottomSheetLayout android:id="@id/bottom_sheet"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@id/bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -240,6 +240,34 @@
                         </LinearLayout>
 
                         <include layout="@layout/switch_layout" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp"
+                        android:theme="@style/Theme.Anticipate.DarkAccent"
+                        android:weightSum="1"
+                        tools:ignore="UseCompoundDrawables"
+                        tools:layout_height="48dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingRight="100dp"
+                            android:text="@string/animation"
+                            android:textSize="16sp" />
+
+                        <Spinner
+                            android:id="@id/spinner_animation"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
 
                     </LinearLayout>
 
