Fixes toolbar color DB bugs, add share button, fix general bugs: fix Switch on <5.0, use back arrow vector, add interpolators in animations, use LeakCanary, tweak layout

--- a/app/src/main/res/anim/slide_out_bottom.xml
+++ b/app/src/main/res/anim/slide_out_bottom.xml
@@ -3,6 +3,6 @@
     android:interpolator="@android:interpolator/fast_out_linear_in">
     <translate
         android:duration="300"
-        android:fromXDelta="0"
-        android:toXDelta="100%p" />
+        android:fromYDelta="0"
+        android:toYDelta="100%p" />
 </set>
