--- a/app/src/main/res/anim/slide_in_bottom.xml
+++ b/app/src/main/res/anim/slide_in_bottom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:interpolator/fast_out_linear_in">
+    android:interpolator="@android:interpolator/linear_out_slow_in">
     <translate
         android:duration="300"
-        android:fromXDelta="0"
-        android:toXDelta="100%p" />
+        android:fromYDelta="100%p"
+        android:toYDelta="0" />
 </set>
