--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="android:textColor">?android:textColorPrimary</item>
 
         <item name="android:windowBackground">@color/background_material_light</item>
+        <item name="android:windowContentOverlay">@null</item>
 
         <item name="popupMenuStyle">@style/PopupMenu</item>
     </style>
