--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -31,4 +31,5 @@
     <item name="linear_default_toolbar_color" type="id" />
     <item name="spinner_browser" type="id" />
     <item name="button_install_chrome" type="id" />
+    <item name="menu_main_changelog" type="id" />
 </resources>
