--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="dialog_corners">2dp</dimen>
     <dimen name="icon_size">40dp</dimen>
+    <dimen name="floating_size">56dp</dimen>
+    <dimen name="floating_padding">16dp</dimen>
 </resources>
