Add app-based toolbar color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -201,10 +201,57 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@id/linear_dynamic_app_toolbar_color"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?selectableItemBackground"
+                        android:baselineAligned="false"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp"
+                        tools:ignore="UseCompoundDrawables">
+
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:paddingBottom="16dp"
+                            android:paddingTop="16dp">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingEnd="8dp"
+                                android:paddingRight="8dp"
+                                android:text="@string/dynamic_app_toolbar_color"
+                                android:textSize="16sp"
+                                tools:ignore="RtlSymmetry" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingEnd="8dp"
+                                android:paddingRight="8dp"
+                                android:text="@string/app_toolbar_color_desc"
+                                android:textColor="?android:textColorSecondary"
+                                android:textSize="14sp"
+                                tools:ignore="RtlSymmetry" />
+
+                        </LinearLayout>
+
+                        <include layout="@layout/switch_layout" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:id="@id/linear_dynamic_toolbar_color"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?selectableItemBackground"
+                        android:baselineAligned="false"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
                         android:paddingLeft="16dp"
